# shmonad

./: .gitignore  LICENSE  README.md  shell.nix  shmonad.cabal
src/: Main.hs  Shmonad.hs
src/Control/Monad/: Shmonad.hs
src/Control/Monad/Shmonad/: Command.hs  Conditional.hs  Expression.hs  Statement.hs
src/Control/Monad/Shmonad/Expression/: Quote.hs  Test.hs  Types.hs
test/Control/Monad/: ShmonadSpec.hs
test/Control/Monad/Shmonad/: CommandSpec.hs  ConditionalSpec.hs  ExpressionSpec.hs  StatementSpec.hs
