name:                shmonad
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD2
license-file:        LICENSE
author:              Chris Johnson-Roberson
maintainer:          chris.johnson.roberson@gmail.com
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Shmonad
                       Control.Monad.Shmonad.Conditional
                       Control.Monad.Shmonad.Expression
                       Control.Monad.Shmonad.Expression.Types
                       Control.Monad.Shmonad.Statement
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , free
                     , text
                     , nat
                     , filepath
                     , unix
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable shmonad
  main-is:             src/Main.hs
  build-depends:       base
                     , shmonad
                     , text
                     , process
                     , temporary
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shmonad
                     , text
                     , nat
                     , process
                     , temporary
                     , hspec
                     , mtl
                     , free
                     , QuickCheck
  default-language:    Haskell2010
